--- a/RegistrationForm/WebContent/registrationform.html
+++ b/RegistrationForm/WebContent/registrationform.html
@@ -11,6 +11,8 @@
     <script type="text/javascript"
     src="javascript/knockout-3.4.2.js"></script>
     <script type="text/javascript"
+    src="javascript/knockout.validation.min.js"></script>
+    <script type="text/javascript"
     src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript"
     src="javascript/registrationform.js"></script>
@@ -28,7 +30,7 @@
                   <h4>Personal Information</h4>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group"  data-bind="validationElement: RegistrationForm.customer.personalInfo.title">
                   <label for="titleInput">Title</label>
                   <div class="dropdown">
                     <button class="btn btn-default dropdown-toggle" type="button" id="titleInput" data-toggle="dropdown" aria-expanded="true" >
@@ -41,13 +43,13 @@
                       </li>
                     </ul>
                   </div>
+                  <span class="help-block" data-bind="validationMessage: RegistrationForm.customer.personalInfo.title"></span>
                 </div>
               <div class="row">
                 <div class="col-md-4">
-                  <div class="form-group" data-bind="css: {'has-error': RegistrationForm.customer.personalInfo.firstName.hasError}">
+                  <div class="form-group" data-bind="validationElement: RegistrationForm.customer.personalInfo.firstName">
                     <label for="firstNameInput">First Name</label>
                     <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.personalInfo.firstName" id="firstNameInput" placeholder="Enter first name">
-                    <p class="help-block" data-bind="visible: RegistrationForm.customer.personalInfo.firstName.hasError"> Please enter first name</p>
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -57,7 +59,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="form-group">
+                  <div class="form-group"  data-bind="validationElement: RegistrationForm.customer.personalInfo.firstName">
                     <label for="lastNameInput">Last Name</label>
                     <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.personalInfo.lastName" id="lastNameInput" placeholder="Enter last name">
                   </div>
@@ -72,13 +74,13 @@
               </div>
               <div class="row">
                 <div class="col-md-4">
-                  <div class="form-group">
+                  <div class="form-group" data-bind="validationElement: RegistrationForm.customer.contactDetails.phoneNumber">
                     <label for="phoneNumberInput">Phone Number</label>
                     <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.contactDetails.phoneNumber" id="phoneNumberInput" placeholder="Enter phone number">
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="form-group">
+                  <div class="form-group" data-bind="validationElement: RegistrationForm.customer.contactDetails.emailAddress">
                     <label for="emailAddressInput">Email</label>
                     <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.contactDetails.emailAddress" id="emailAddressInput" placeholder="Enter email address">
                   </div>
@@ -87,7 +89,7 @@
               <div class="row">
                   <div class="col-md-4">
                     <label>Preferred Contact</label>
-                    <div class="form-group">
+                    <div class="form-group" data-bind="validationElement: RegistrationForm.customer.contactDetails.preferredContact, validationOptions: {insertMessages: false}">
                       <label class="radio-inline">
                         <input type="radio" value="phone"
                         name="preferredContactInput" data-bind="checked:
@@ -98,6 +100,7 @@
                         name="preferredContactInput" data-bind="checked:
                         RegistrationForm.customer.contactDetails.preferredContact">Email
                       </label>
+                      <span class="help-block" data-bind="validationMessage: RegistrationForm.customer.contactDetails.preferredContact"> </span>
                     </div>
                   </div>
                 </div>
@@ -113,19 +116,19 @@
                   <h5>Residential Address</h5>
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.residential.street">
                 <label for="streetInput">Street Address</label>
                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.residential.street" id="streetInput" placeholder="Enter street address">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.residential.city">
                 <label for="cityInput">City</label>
                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.residential.city" id="cityInput" placeholder="Enter city">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.residential.postCode">
                 <label for="postCodeInput">Postcode</label>
                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.residential.postCode" id="postCodeInput" placeholder="Enter postcode">
                 </div>
-                <div class="form-group">
+                <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.residential.country">
                 <label for="countryInput">Country</label>
                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.residential.country" id="countryInput" placeholder="Enter country">
                 </div>
@@ -137,13 +140,14 @@
                     <div class="row">
                       <div class="col-md-4">
                         <label>Select postal address type</label>
-                        <div class="form-group">
+                        <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.type, validationOptions: {insertMessages: false}">
                           <label class="radio-inline">
                             <input type="radio" value="street" name="postalAddressTypeInput" data-bind="checked: RegistrationForm.customer.address.postal.type">Street address
                           </label>
                           <label class="radio-inline">
                             <input type="radio" value="pobox" name="postalAddressTypeInput" data-bind="checked: RegistrationForm.customer.address.postal.type">PO Box
                           </label>
+                          <span class="help-block" data-bind="validationMessage: RegistrationForm.customer.address.postal.type"> </span>
                         </div>
                       </div>
                   </div>
@@ -152,7 +156,7 @@
                       <div data-bind="visible: RegistrationForm.customer.address.postal.type() == 'street'">
                           <div class="row">
                             <div class="col-md-12">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.streetAddress.street">
                                 <label for="postalStreetInput">Street Address</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.streetAddress.street" id="postalStreetInput" placeholder="Enter street address">
                               </div>
@@ -160,20 +164,20 @@
                           </div>
                           <div class="row">
                             <div class="col-md-5">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.streetAddress.city">
                                 <label for="postalCityInput">City</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.streetAddress.city" id="postalCityInput" placeholder="Enter city">
                               </div>
                             </div>
                             <div class="col-md-2">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.streetAddress.postCode">
                                 <label for="postalPostCodeInput">Postcode</label>
                                 <input type="text" class="form-control" data-bind="value:
                                 RegistrationForm.customer.address.postal.streetAddress.postCode" id="postalPostCodeInput" placeholder="Enter postcode">
                               </div>
                             </div>
                             <div class="col-md-5">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.streetAddress.country">
                                 <label for="postalCountryInput">Country</label>
                                 <input type="text" class="form-control" data-bind="value:
                                 RegistrationForm.customer.address.postal.streetAddress.country"
@@ -188,7 +192,7 @@
                       <div data-bind="visible: RegistrationForm.customer.address.postal.type() == 'pobox'">
                           <div class="row">
                             <div class="col-md-12">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.poBoxAddress.poBox">
                                 <label for="poBoxInput">PO Box</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.poBoxAddress.poBox" id="poBoxInput" placeholder="Enter PO Box">
                               </div>
@@ -196,19 +200,19 @@
                           </div>
                           <div class="row">
                             <div class="col-md-5">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.poBoxAddress.city">
                                 <label for="poBoxCityInput">City</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.poBoxAddress.city" id="poBoxCityInput" placeholder="Enter city">
                               </div>
                             </div>
                             <div class="col-md-2">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.poBoxAddress.postCode">
                                 <label for="poBoxPostCodeInput">Postcode</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.poBoxAddress.postCode" id="poBoxPostCodeInput" placeholder="Enter postcode">
                               </div>
                             </div>
                             <div class="col-md-5">
-                              <div class="form-group">
+                              <div class="form-group" data-bind="validationElement: RegistrationForm.customer.address.postal.poBoxAddress.country">
                                 <label for="poBoxCountryInput">Country</label>
                                 <input type="text" class="form-control" data-bind="value: RegistrationForm.customer.address.postal.poBoxAddress.country" id="poBoxCountryInput" placeholder="Enter country">
                               </div>
@@ -227,19 +231,19 @@
                   <div data-bind="foreach: RegistrationForm.customer.creditCards">
                       <div class="row">
                         <div class="col-md-4">
-                          <div class="form-group">
+                          <div class="form-group" data-bind="validationElement: name">
                             <label for="ccNameInput">Name on card</label>
                             <input type="text" class="form-control" data-bind="value: name" id="ccNameInput" placeholder="Enter name on card">
                           </div>
                         </div>
                         <div class="col-md-4">
-                          <div class="form-group">
+                          <div class="form-group"  data-bind="validationElement: number">
                             <label for="ccNumberInput">Card Number</label>
                             <input type="text" class="form-control" data-bind="value: number" id="ccNumberInput" placeholder="Enter card number">
                           </div>
                         </div>
                         <div class="col-md-2">
-                          <div class="form-group">
+                          <div class="form-group" data-bind="validationElement: expiryDate">
                             <label for="ccExpiryDateInput">Card Number</label>
                             <input type="text" class="form-control" data-bind="value: expiryDate" id="ccExpiryDateInput" placeholder="mm/yy">
                           </div>
